Add vscode debugger support for terminal script args

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,9 +11,12 @@
       "program": "${workspaceFolder}/selenium/index.py",
       "console": "integratedTerminal",
       "args": [
+        "--league_id",
         "6059",
-        "--user=mark",
-        "--pw=foo"
+        "--username",
+        "foo",
+        "--password",
+        "bar"
       ]
     }
     {
