--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,9 +14,9 @@
         "--league_id",
         "6059",
         "--username",
-        "foo",
+        "@gmail.com",
         "--password",
-        "bar"
+        ""
       ]
     },
     {
