Update vscode debugger config support

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,9 +14,11 @@
         "--league_id",
         "6059",
         "--username",
-        "@gmail.com",
+        "",
         "--password",
-        ""
+        "",
+        "--print",
+        "--file"
       ]
     },
     {
