--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "python.pythonPath": "${workspaceFolder}/env/bin/python"
+  "python.pythonPath": "${workspaceFolder}/env/bin/python",
+  "python.unitTest.unittestEnabled": false,
+  "python.unitTest.pyTestEnabled": true,
+  "python.unitTest.nosetestsEnabled": false,
 }
