--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,28 @@
-selenium==3.14.0
+astroid==2.0.4
+atomicwrites==1.2.1
+attrs==18.2.0
+certifi==2018.8.24
+chardet==3.0.4
+Django==2.1.1
+djangorestframework==3.8.2
 docopt==0.6.2
+idna==2.7
+isort==4.3.4
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
+more-itertools==4.3.0
+pipreqs==0.4.9
+pluggy==0.7.1
+psycopg2==2.7.5
+py==1.6.0
 Pygments==2.2.0
+pylint==2.1.1
 pytest==3.8.0
+pytz==2018.5
+requests==2.19.1
+selenium==3.14.0
+six==1.11.0
+typed-ast==1.1.0
+urllib3==1.23
+wrapt==1.10.11
+yarg==0.1.9
